# customer_support_rag_chatbot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
models/: chunk.py  evaluation.py
notebooks/: data_preprocessing.ipynb  embedding_test.ipynb
src/: cache.py  chunk_strategies.py  config.py  data_loader.py  evaluation.py  generator.py  indexer.py  metadata_store.py  prompt_templates.py  rag_pipeline.py  retriever.py
src/embedding/: adapter.py
src/models/: chunk.py  llm_io.py
